borrando puntos del menu

--- a/wyckoff.html
+++ b/wyckoff.html
@@ -121,7 +121,7 @@
                      <li>
                        <a href="#documenter-2"><i class="fa fa-bars"></i>El metodo Wyckoff </a>
                           <li><a href="#documenter-2-0"><i class="fa fa-bitcoin"></i>El Composite Man</a></li>
-                              <li><a href="#documenter-2-1"><i class="fa fa fa-book"></i>Las leyes 3 de Wyckoff <b>+</b></a>
+                              <li><a href="#documenter-2-1"><i class="fa fa fa-book"></i>Las leyes 3 de Wyckoff <b></b></a>
                             <ol>
                               <li><a href="#documenter-2-2">Ley de oferta y demanda</a></li>
                               <li><a href="#documenter-2-3">Ley de causa y efecto</a></li>
@@ -133,7 +133,7 @@
                         <a href="#documenter-3"><i class="fa fa-line-chart"></i> Ciclos del mercado </a>
                     </li>
                      <li>
-                        <a href="#documenter-4"><i class="fa fa-bar-chart"></i> Fase de acumulacion <b>+</b></a>
+                        <a href="#documenter-4"><i class="fa fa-bar-chart"></i> Fase de acumulacion <b></b></a>
                         <ol>
                            <li><a href="#documenter-4-1">Fase A </a></li>
                            <li><a href="#documenter-4-2">Fase B</a> </li>
@@ -143,7 +143,7 @@
                         </ol>
                      </li>
                      <li>
-                        <a href="#documenter-5"><i class="fa fa-area-chart"></i> Fase de distribucion <b>+</b></a>
+                        <a href="#documenter-5"><i class="fa fa-area-chart"></i> Fase de distribucion <b></b></a>
                         <ol>
                            <li><a href="#documenter-5-1">Fase A</a></li>
                            <li><a href="#documenter-5-2">Fase B</a> </li>
