--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                      </div>
                      <!-- Header Logo -->
                      <a class="header__block header__brand" href="#">
-                        <h1> <img src="images/hablando.png" alt="Hablemos de trading"></h1>
+                        <h1> <img class="logo-logo" src="images/hablando.png" alt="Hablemos de trading"></h1>
                      </a>
                      <!-- End Header Logo -->
       <!-- Inicio de Barra de menu superior -->
