--- a/wyckoff.html
+++ b/wyckoff.html
@@ -41,7 +41,7 @@
                      <!-- End Header Logo -->
       <!-- Inicio de Barra de menu superior -->
                   </div>
-                  <div class="col-lg-11 col-sm-10 hidden-xs">
+                  <div class="col-lg-11 col-sm-10">
                      <div class="header__nav">
                         <div class="header__nav--left">
                            <ul class="dx-nav-0 dx-nav-0-docs">
@@ -60,13 +60,8 @@
                               </li>
                               -->
                            </ul>
-                           <form class="header__search dx-form-search" id="siteSearch" name="search" method="get">
-                              <label class="sr-only" for="siteQ">Busque una lalabra</label>
-                              <input class="dx-search-input" id="siteQ" name="q" type="search" value="" placeholder="Buscar">
-                              <span class="button-search fa fa-search"></span>
-                           </form>
                         </div>
-                        <div class="header__nav--right">
+                        <div class="header__nav--right hidden-xs">
                            <ul class="dx-nav-0 dx-nav-0-tools">
                               <li class="dx-nav-0-item ">
                                  <a class="dx-nav-0-link" href="javascript:void(0);">Discord</a>
