fix https request

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <p>
 
                            <blockquote class="darker-grey">
-                              <p><a href="http://revistadetrading.com/index.php/wyckoff-vsa/item/1215-el-regalo-de-reyes-prometido-master-the-markets-en-espa%C3%B1ol">Master The Markets</a></p>
+                              <p><a href="https://revistadetrading.com/index.php/wyckoff-vsa/item/1215-el-regalo-de-reyes-prometido-master-the-markets-en-espa%C3%B1ol">Master The Markets</a></p>
                               <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                            </blockquote>
                            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -901,8 +901,8 @@
   <!--  <script src="js/jquery.1.6.4.js"></script> -->
 
 <!-- Jquery de migracion -->
-      <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
-      <script src="http://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
 
 <!-- Jquery de migracion V3
       <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
