--- a/wyckoff.html
+++ b/wyckoff.html
@@ -568,7 +568,7 @@
                              <h5>Rango de trading</h5>
                                <p> <img src="fotos/rango-trading.jpg" alt="Rango de trading" onclick="Zoom(this)">  </p>
                               <blockquote class="darker-grey">
-                                 <p><a href="http://www.trade2win.com/articles/1094-range-breakouts-trading-tactics/p/3?group=methodologies&topic=technical-analysis">http://trade2win.com</a>.</p>
+                                 <p><a href="https://www.trade2win.com/articles/1094-range-breakouts-trading-tactics/p/3?group=methodologies&topic=technical-analysis">https://trade2win.com</a>.</p>
                                  <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                               </blockquote>
                           </p>
@@ -993,8 +993,8 @@
   <!--  <script src="js/jquery.1.6.4.js"></script> -->
 
 <!-- Jquery de migracion -->
-      <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
-      <script src="http://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
 
 <!-- Jquery de migracion V3
       <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
