creacion e inclusion de plantillas para nuevo contenido

--- a/elliot.html
+++ b/elliot.html
@@ -8,11 +8,11 @@
       <![endif]-->
       <!-- Mobile Specific -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>hablemosdetrading - Las grandes teorias del trading</title>
+      <title>Tradingestudio - Las grandes teorias del trading</title>
 	    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
-      <meta name="description" content="hablemosdetrading">
-      <meta name="author" content="hablemosdetrading">
-      <meta name="copyright" content="hablemosdetrading">
+      <meta name="description" content="tradingestudio">
+      <meta name="author" content="tradingestudio">
+      <meta name="copyright" content="tradingestudio">
       <meta name="date" content="2018-10-13">
       <!-- Google fuentes -->
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900">
@@ -54,11 +54,9 @@
                               <li class="dx-nav-0-item dx-nav-active">
                                  <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
                               </li>
-                                 <!--
                               <li class="dx-nav-0-item ">
-                                 <a class="dx-nav-0-link" href="./dow.html">Dow</a>
+                                 <a class="dx-nav-0-link" href="./chartimo.html">Chartimo</a>
                               </li>
-                              -->
                            </ul>
                         </div>
                         <div class="header__nav--right hidden-xs">
