--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       <![endif]-->
       <!-- Mobile Specific -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>hablemosdetrading - Las grandes teorias del trading</title>
+      <title>Tradingestudio - Las grandes teorias del trading</title>
 	  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
-      <meta name="description" content="hablemosdetrading">
-      <meta name="author" content="hablemosdetrading">
-      <meta name="copyright" content="hablemosdetrading">
+      <meta name="description" content="tradingestudio">
+      <meta name="author" content="tradingestudio">
+      <meta name="copyright" content="tradingestudio">
       <meta name="date" content="2018-10-13">
       <!-- Google fuentes -->
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900">
@@ -53,11 +53,10 @@
                             </li>
                             <li class="dx-nav-0-item ">
                                <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
-                            </li><!--
-                            <li class="dx-nav-0-item ">
-                               <a class="dx-nav-0-link" href="./dow.html">Dow</a>
                             </li>
-                            -->
+                            <li class="dx-nav-0-item ">
+                              <a class="dx-nav-0-link" href="./chartimo.html">Chartimo</a>
+                           </li>
                           </ul>
                         </div>
                         <div class="header__nav--right hidden-xs">
@@ -221,7 +220,7 @@
                         <p>
 
                            <blockquote class="darker-grey">
-                              <p><a href="https://revistadetrading.com/index.php/wyckoff-vsa/item/1215-el-regalo-de-reyes-prometido-master-the-markets-en-espa%C3%B1ol">Master The Markets</a></p>
+                              <p><a href="http://revistadetrading.com/index.php/wyckoff-vsa/item/1215-el-regalo-de-reyes-prometido-master-the-markets-en-espa%C3%B1ol">Master The Markets</a></p>
                               <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                            </blockquote>
                            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -901,8 +900,8 @@
   <!--  <script src="js/jquery.1.6.4.js"></script> -->
 
 <!-- Jquery de migracion -->
-      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-      <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+      <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="http://code.jquery.com/jquery-migrate-1.4.1.js"></script>
 
 <!-- Jquery de migracion V3
       <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
