--- a/chartimo.html
+++ b/chartimo.html
@@ -119,7 +119,7 @@
                         </ol>
                       </li>
                       <li>
-                        <a href="#documenter-3"><i class="fa fa-bars"></i>Menu 3</a>
+                        <a href="#documenter-3"><i class="fa fa-viacoin" aria-hidden="true"></i></i>Chartimso clasico</a>
                         <ol>
                            <li><a href="#documenter-3-1">Menu 2-1</a></li>
                            <li><a href="#documenter-3-2">Menu 2-2</a></li>
@@ -127,7 +127,7 @@
                         </ol>
                       </li>
                       <li>
-                        <a href="#documenter-4"><i class="fa fa-bars"></i>Menu 4</a>
+                        <a href="#documenter-4"><i class="fa fa-krw" aria-hidden="true"></i></i>Patrones armonicos</a>
                         <ol>
                            <li><a href="#documenter-4-1">Menu 2-1</a></li>
                            <li><a href="#documenter-4-2">Menu 2-2</a></li>
