actualizacion de todo

--- a/patrones-elliot.html
+++ b/patrones-elliot.html
@@ -8,7 +8,7 @@
       <![endif]-->
       <!-- Mobile Specific -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>tradingestudio - Las grandes teorias del trading</title>
+      <title>Tradingestudio - Las grandes teorias del trading</title>
 	    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
       <meta name="description" content="tradingestudio">
       <meta name="author" content="tradingestudio">
