agregando logos de muestra

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                      </div>
                      <!-- Header Logo -->
                      <a class="header__block header__brand" href="#">
-                        <h1> <img class="logo-logo" src="images/hablando.png" alt="Hablemos de trading"></h1>
+                        <h1> <img class="logo-logo" src="images/tradinglogo2.jpeg" alt="Trading estudio"></h1>
                      </a>
                      <!-- End Header Logo -->
       <!-- Inicio de Barra de menu superior -->
@@ -216,7 +216,7 @@
     <!-- inicio del Contenido del primer articulo, derecho -->
                   <div class="method-example">
                      <div class="method-example-part">
-                          <p> <img src="fotos/portada.jpg" alt="masterthemarkets"> </p>
+                          <p> <img src="fotos/inicio/el'-trading.jpg" alt="masterthemarkets"> </p>
                         <p>
 
                            <blockquote class="darker-grey">
