renovacion de logonro2

--- a/dow.html
+++ b/dow.html
@@ -36,7 +36,7 @@
                      </div>
                      <!-- Header Logo -->
                      <a class="header__block header__brand" href="index.html">
-                        <h1> <img src="images/logo.png" alt="Hablemos de trading"></h1>
+                        <h1> <img class="logo-logo" src="images/tradinglogo2.jpeg" alt="Trading estudio"></h1>
                      </a>
                      <!-- End Header Logo -->
       <!-- Inicio de Barra de menu superior -->
