--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <!-- inicio del Contenido del primer articulo, derecho -->
                   <div class="method-example">
                      <div class="method-example-part">
-                          <p> <img src="fotos/inicio/el'-trading.jpg" alt="masterthemarkets"> </p>
+                          <p> <img src="fotos/portada.jpg" alt="masterthemarkets"> </p>
                         <p>
 
                            <blockquote class="darker-grey">
