actualizacion de la palabra chartimo
correccion de archivos, enlaces y palabras

--- a/chartismo.html
+++ b/chartismo.html
@@ -55,7 +55,7 @@
                                  <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
                               </li> 
                               <li class="dx-nav-0-item dx-nav-active">
-                                 <a class="dx-nav-0-link" href="./chartimo.html">Chartimo</a>
+                                 <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
                               </li>
                            </ul>
                         </div>
@@ -108,7 +108,7 @@
                <div id="scroll" class="scroll">
                   <ol id="documenter_nav">
                      <li>
-                        <a href="#documenter-1"><i class="fa fa fa-book"></i>El Chartimo</a>
+                        <a href="#documenter-1"><i class="fa fa fa-book"></i>El Chartismo</a>
                       <li>
                         <a href="#documenter-2"><i class="fa fa-expand" aria-hidden="true"></i>Tendencias</a>
                         <ol>
