--- a/wyckoff.html
+++ b/wyckoff.html
@@ -56,7 +56,7 @@
                                  <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
                               </li>  
                               <li class="dx-nav-0-item ">
-                                 <a class="dx-nav-0-link" href="./chartimo.html">Chartimo</a>
+                                 <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
                               </li>
                            </ul>
                         </div>
