correccion del https en  index

--- a/index.html
+++ b/index.html
@@ -900,8 +900,8 @@
   <!--  <script src="js/jquery.1.6.4.js"></script> -->
 
 <!-- Jquery de migracion -->
-      <script src="http://code.jquery.com/jquery-1.12.4.js"></script>
-      <script src="http://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
 
 <!-- Jquery de migracion V3
       <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
